@@ -130,7 +130,10 @@ ul {
 
 h1, h2, h3, h4, h5, h6
 {
-    font-weight: bold;
+	font-weight: bold;
+}
+.editsection {
+	font-weight: normal;
 }
 
 p, .documentDescription {
